force-app/main/default/objects/Campaign/fields/External_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Owner_Id__c</fullName>
    <formula>Owner.External_Record_Id__c</formula>
    <label>External Owner Id</label>
    <type>Text</type>
</CustomField>