force-app/main/default/objects/Campaign/fields/External_Parent_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Parent_Campaign_Id__c</fullName>
    <formula>Parent.External_Record_Id__c</formula>
    <label>External Parent Campaign Id</label>
    <type>Text</type>
</CustomField>